--- a/src/components/score.css
+++ b/src/components/score.css
@@ -46,7 +46,6 @@
     margin-top: -5rem !important;
     position: absolute !important;
     background: #00000033 !important;
-    padding: 1rem;
     border-radius: .5rem;
     font-size: 1.2rem;
 }
@@ -238,7 +237,7 @@
 
 .card-header {
     padding: 1.5rem;
-    background: #1a1a1a;
+    background: #1a1a1a75;
     color: white;
     text-align: center;
 }
@@ -253,7 +252,7 @@
 .competition-name {
     font-size: 1.5rem;
     margin: 0;
-    color: white;
+    color: black;
 }
 
 .card-body {
