--- a/src/components/teamDetails.css
+++ b/src/components/teamDetails.css
@@ -13,6 +13,11 @@
     position: relative;
 }
 
+h1{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
 .back-button {
     position: absolute;
     left: 0;
